--- a/Первое знакомство с C_Sharp/Первое знакомство с C_Sharp.csproj
+++ b/Первое знакомство с C_Sharp/Первое знакомство с C_Sharp.csproj
@@ -35,5 +35,12 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <Compile Include="Bitcoin.cs" />
+    <Compile Include="First_Step.cs" />
+    <Compile Include="Incorrect_Cast.cs" />
+    <Compile Include="Incorrect_Type.cs" />
+    <Compile Include="String_To_Number.cs" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
